Fix text spacing and mobile width

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,8 @@ tr:hover{
    padding: 20px;
    margin: 80px auto 20px auto ; /* 80px 
    top margin creates space for nav */
-   width: 80%;
+   max-width: 600px;
+  width: 90%;
    border-radius: 8px;
    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 }
